--- a/ui/css/style.css
+++ b/ui/css/style.css
@@ -53,6 +53,10 @@ h6 { font-size: 14px; margin: 0 0 5px 0; padding: 0;}
 	float: right;
 }
 
+.justify {
+	text-align: justify;
+}
+
 .image_wrapper {
 	padding: 4px;
 	background: #fff;
